@@ -2,6 +2,7 @@
 # -*- mode: python -*-
 #
 # Copyright (C) 2007, 2008 Loic Dachary <loic@dachary.org>
+# Copyright (C)       2008 Bradley M. Kuhn <bkuhn@ebb.org>
 # Copyright (C) 2006 Mekensleep
 #
 # Mekensleep
@@ -36,7 +37,7 @@ import unittest
 
 from tests.testmessages import silence_all_messages
 verbose = int(os.environ.get('VERBOSE_T', '-1'))
-if verbose < 0: silence_all_messages()
+silence_all_messages()
 
 from pokerui.pokerrenderer import PokerRenderer
 from pokernetwork.pokerclientpackets import *
@@ -62,12 +63,22 @@ class PokerProtocolMockup:
 
 class PokerFactoryMockup:
     def __init__(self):
-	self.verbose = 3
+	self.verbose = 4
 	self.chat_config = {'max_chars': 80,
 			    'line_length': 80}
+        self.clearMessages()
 
     def packet2game(self, packet):
 	pass
+
+    def clearMessages(self):
+        self.messages = []
+
+    def message(self, str):
+        self.messages.append(str)
+
+    def getMessages(self):
+        return self.messages
 
 
 class PokerPacketChatMockup:
